--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Template: Coding Project by Michelle Joseph</title>
+    <title>Rewind: Coding Project by Michelle Joseph</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,7 +12,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
     <link href="css/site.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="img/CorgiFavicon.png">
+    <link rel="icon" type="image/png" href="img/favicon_io/favicon-32x32.png">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -21,7 +21,7 @@
 <!-- NAV SECTION  -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/FrontFacingCorgi.png" class="d-inline-block align-text-top" width="30" height="30">APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="img/favicon_io/favicon-32x32.png" class="d-inline-block align-text-top" width="30" height="30">  Rewind</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/michbergjo/Rewind">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://michelle-joseph-portfolio.netlify.app/">About</a>
@@ -53,9 +53,9 @@
        <div class="container col-xxl-8 px-4 py-5">
           <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
             <div class="col order-last order-lg-first pt-lg-5">
-                <h1 class="display-5 fw-bold lh-1 mb-3 mt-5">APP NAME: A Coding Project</h1>
-                <h4 class="lead">An application that displays the numbers 1 to 100, displaying the event numbers
-                    in <strong>BOLD.</strong>
+                <h1 class="display-5 fw-bold lh-1 mb-3 mt-5">Rewind: A Coding Project</h1>
+                <h4 class="lead">There and back again. A javascript coding exercise using strings. Write a program that displays a string 
+                    in reverse.
                 </h4>
                 <ul class="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -80,8 +80,8 @@
                     </div>
                 </h5>
             </div>
-            <div class="col pt-5 pt-md-0">
-                <img src="img/Race to 100.svg" class="img-fluid center-block d-block mx-auto" alt="race to 100 logo" width="500" height="700">
+            <div class="col d-flex align-content-center">
+                <img src="img/Rewind.svg" class="img-fluid center-block d-block mx-auto" alt="rewind logo" width="500" height="700">
             </div>
           </div>
        </div>
@@ -100,9 +100,9 @@
                </div>
                <div class="col d-flex align-items-center justify-content-start justify-content-start justify-content-md-center">
                    <div class="row">
-                       <div class="col social"><a href="#"  target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                       <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                       <div class="col social"><a href="#" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></div>
+                       <div class="col social"><a href="https://www.linkedin.com/in/michelle-joseph-279184219/"  target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                       <div class="col social"><a href="https://github.com/michbergjo" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                       <div class="col social"><a href="https://www.instagram.com/michellecodestheworld/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a></div>
                    </div>
                </div>
            </div>
